delete duplicate classes

--- a/FredChessGame/FredChessGame.csproj
+++ b/FredChessGame/FredChessGame.csproj
@@ -83,8 +83,7 @@
     <Compile Include="Model\Reine.cs" />
     <Compile Include="Model\Roi.cs" />
     <Compile Include="Model\Tour.cs" />
-    <Compile Include="Pion.cs" />
-    <Compile Include="Plateau.cs" />
+    <Compile Include="Model\Pion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
