--- a/FredChessGame/FredChessGame.csproj
+++ b/FredChessGame/FredChessGame.csproj
@@ -90,6 +90,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Commands\RelayCommand.cs" />
     <Compile Include="Converters\CaseColorConverter.cs" />
     <Compile Include="ViewModel\CaseViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
@@ -141,8 +142,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Commands\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
